# onnx-runner

./: Cargo.toml  README.md
.github/workflows/: build.yml  release.yml
src/: main.rs
src/runner/: runner.rs
