[package]
name = "onnx-runner"
version = "0.1.0"
edition = "2021"

[dependencies]
eyre = "0.6.12"
thiserror = { version = "1.0.64", features = [] }
opencv = "0.93.3"
reqwest = { version = "0.12.8", features = ["blocking"] }
serde = { version = "1.0.210", features = ["derive"] }
ort = { version = "2.0.0-rc.8", features = ["cuda", "tensorrt"] }
ndarray = "0.16.1"
uuid = { version = "1.11.0", features = ["v4"] }
clap = { version = "4.5.20", features = ["derive"] }
